<?xml version="1.0"?>
<package format="2">
  <name>hanoi_actuator</name>
  <version>0.0.0</version>
  <description>The hanoi_actuator package</description>

  <maintainer email="olivier.kamers@student.kuleuven.be">Olivier Kamers</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslib</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>  
  <build_depend>kinova_driver</build_depend>
  <build_depend>kinova_msgs</build_depend>


  <exec_depend>roslib</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>kinova_driver</exec_depend>
  <exec_depend>kinova_msgs</exec_depend>

  <export>
  </export>
</package>
