<?xml version="1.0"?>
<package format="2">
  <name>hanoi_reasoner</name>
  <version>0.0.0</version>
  <description>The hanoi_reasoner package</description>

  <maintainer email="olivier.kamers@student.kuleuven.be">Olivier Kamers</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>hanoi_observer</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <exec_depend>hanoi_observer</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
  </export>
</package>
